# c_interpolation

./: CMakeLists.txt  interpolation.c  readme.md
headers/: interpolation.h
src/: interpolation.c
tests/: test_interpolation.c
